--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul class="menu">
                     <li><a href="index.html"> Home</li></a>
-                    <li><a href="../pages/about.html">About </li></a>
+                    <li><a href="./pages/about.html">About </li></a>
                     <li><a href="./pages/gallery.html">Gallery</li></a>
                     <li><a href="./pages/experience.html">Experience</li></a>
                     <li><a href="./pages/experience.html/#academy">Academy</li></a>
